# InsightGraph

./: .env.example  .gitignore  INTEGRATION.md  Makefile  PUBLISHING.md  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  ruff.toml  tsconfig.base.json
apps/api/: package.json  pyproject.toml
apps/api/src/: app.ts  index.ts  pipeline-runner.ts
apps/api/src/insightgraph_api/: main.py
apps/api/src/insightgraph_api/routes/: agent.py
apps/api/src/lib/: validators.ts
apps/api/src/routes/: agent.ts  health.ts  ingestion.ts  query.ts  search.ts
apps/mcp-server/: package.json
apps/mcp-server/src/: index.ts  server.ts
apps/web/: package.json
apps/web/src/app/: page.tsx
apps/web/src/components/: ChatWindow.tsx  GraphViewer.tsx
apps/worker/: package.json
apps/worker/src/: index.ts  queues.ts
apps/worker/src/insightgraph_worker/tasks/: build_graph.py
apps/worker/src/tasks/: build-graph.ts  parse.ts
docs/: api-reference.md  architecture.md  evaluation.md  mvp-roadmap.md  ontology.md
electron-integration/: package-lock.json  package.json
electron-integration/src/: backend-manager.ts  config.ts  precheck.ts
python/: Makefile  docker-compose.yml  pyproject.toml  ruff.toml
python/apps/api/src/insightgraph_api/: dependencies.py  main.py
python/apps/api/src/insightgraph_api/routes/: agent.py  health.py  ingestion.py  query.py  search.py
python/apps/mcp-server/: pyproject.toml
python/apps/mcp-server/src/insightgraph_mcp/: server.py
python/apps/worker/: pyproject.toml
python/apps/worker/src/insightgraph_worker/: app.py
python/apps/worker/src/insightgraph_worker/tasks/: parse.py
python/scripts/: build-binary.py  server_entry.py
python/tests/unit/test_core/: test_extraction_models.py  test_ir_models.py  test_ontology.py
scripts/: build.sh  jobs.sh  publish.sh  start-all.sh  start-api.sh  start-infra.sh  start-mcp.sh  start-web.sh  start-worker.sh  test-e2e.sh
sdk/: package-lock.json  package.json
sdk-embedded/: README.md  package.json
sdk-embedded/examples/: smoke-test.ts
sdk-embedded/src/: index.ts  insightgraph.ts  pipeline.ts  types.ts
sdk/src/: types.ts
tests/: conftest.py
tests/unit/test_core/: test_config.py  test_extraction_models.py
typescript/electron-integration/: README.md  package.json
typescript/electron-integration/src/: backend-manager.ts  config.ts  docker-manager.ts  health-check.ts  index.ts  precheck.ts
typescript/sdk/: package.json  tsconfig.json
typescript/sdk/src/: client.ts  index.ts
typescript/web/: package-lock.json
typescript/web/src/app/: layout.tsx
typescript/web/src/app/chat/: page.tsx
typescript/web/src/app/entity/[name]/: page.tsx
typescript/web/src/app/reports/: page.tsx
typescript/web/src/app/search/: page.tsx
typescript/web/src/types/: index.ts
web/: eslint.config.mjs
web/src/app/: layout.tsx  page.tsx
web/src/app/entity/[name]/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/reports/[reportId]/: page.tsx
web/src/app/search/: page.tsx
web/src/components/: GraphViewer.tsx  NodePanel.tsx  SearchBar.tsx
web/src/lib/: api.ts
