[project]
name = "insightgraph"
version = "0.1.0"
description = "Turn reports into evidence-centric knowledge graphs for AI agent analysis"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "insightgraph-api",
    "insightgraph-worker",
    "insightgraph-mcp-server",
]

[tool.uv.sources]
insightgraph-api = { workspace = true }
insightgraph-worker = { workspace = true }
insightgraph-mcp-server = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (Neo4j, Redis)",
    "e2e: end-to-end tests requiring LLM API keys",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
