[project]
name = "insightgraph-api"
version = "0.1.0"
description = "FastAPI application for InsightGraph"
requires-python = ">=3.11"
dependencies = [
    "insightgraph-core",
    "insightgraph-ingestion",
    "insightgraph-parser",
    "insightgraph-extractor",
    "insightgraph-resolver",
    "insightgraph-graph",
    "insightgraph-retriever",
    "insightgraph-agent-runtime",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
insightgraph-core = { workspace = true }
insightgraph-ingestion = { workspace = true }
insightgraph-parser = { workspace = true }
insightgraph-extractor = { workspace = true }
insightgraph-resolver = { workspace = true }
insightgraph-graph = { workspace = true }
insightgraph-retriever = { workspace = true }
insightgraph-agent-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insightgraph_api"]
