[project]
name = "insightgraph-mcp-server"
version = "0.1.0"
description = "MCP server exposing InsightGraph tools for AI agent integration"
requires-python = ">=3.11"
dependencies = [
    "insightgraph-core",
    "insightgraph-graph",
    "insightgraph-retriever",
    "insightgraph-agent-runtime",
    "mcp>=1.0",
]

[tool.uv.sources]
insightgraph-core = { workspace = true }
insightgraph-graph = { workspace = true }
insightgraph-retriever = { workspace = true }
insightgraph-agent-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insightgraph_mcp"]
