[project]
name = "insightgraph-worker"
version = "0.1.0"
description = "Celery worker for async pipeline processing in InsightGraph"
requires-python = ">=3.11"
dependencies = [
    "insightgraph-core",
    "insightgraph-parser",
    "insightgraph-extractor",
    "insightgraph-resolver",
    "insightgraph-graph",
    "celery[redis]>=5.3",
]

[tool.uv.sources]
insightgraph-core = { workspace = true }
insightgraph-parser = { workspace = true }
insightgraph-extractor = { workspace = true }
insightgraph-resolver = { workspace = true }
insightgraph-graph = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insightgraph_worker"]
